본문과 이미지 뽑아오기 성공

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/rss_recycler"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:replaceAll="@{vm.rssList}"
+            app:addItem="@{vm.rssList}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
