--- a/app/src/main/res/layout/activity_rss_detail.xml
+++ b/app/src/main/res/layout/activity_rss_detail.xml
@@ -17,6 +17,7 @@
         <HorizontalScrollView
             android:id="@+id/horizontalScrollView"
             android:layout_width="match_parent"
+            android:padding="5dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             app:layout_constraintEnd_toEndOf="parent"
