--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,9 @@
 <resources>
 
     <!-- Base application theme. -->
+
+    <style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar" />
+
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
