--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="rss_image_size_WH">90dp</dimen>
     <dimen name="logo_size_WH">150dp</dimen>
     <dimen name="small_image_size_WH">50dp</dimen>
+    <dimen name="label_layout_W">170dp</dimen>
 </resources>
